<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, UIActivity!</string>
    <string name="app_name">photoShare</string>

    <!-- View Description -->
    <string name="popular">流行</string>
    <string name="camera">拍照</string>
    <string name="follower">跟随者</string>
    <string name="feeds">新鲜事</string>
    <string name="profile">资料</string>
    <string name="photos">相片</string>
    <string name="comment">评论</string>
    <string name="like">赞</string>
    <string name="unlike">取消赞</string>
    <string name="love">喜爱</string>
    <string name="follow">被跟随</string>
    <string name="following">跟随</string>
    <string name="home">家</string>
    <string name="news">新消息</string>
    <string name="myNewsTitle">我的消息</string>
    <string name="myFollowerNewsTitle">跟随消息</string>
    <string name="crop">裁剪</string>
    <string name="preferences">偏好</string>
    <string name="friends">朋友</string>
    <string name="messages">信息</string>
    <string name="share">分享</string>
    <string name="settings">设置</string>
    <string name="croping">裁剪中</string>
    <string name="main">主页</string>
    <string name="signIn">登陆</string>
    <string name="signUp">注册</string>
    <string name="date">日期</string>
    <string name="dragRefresh">下拉刷新</string>
    <string name="lastRefresh">上次更新</string>
    <string name="toastStartCroping">开始裁剪喽</string>
    <string name="toastStopCroping">停止裁剪喽</string>
    <string name="myphotos">我的照片</string>
    <string name="mylikedphotos">我喜欢的照片</string>
    <string name="more">更多</string>
    <string name="decorate">渲染</string>

    <!-- Profile Description -->
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="publicinfo">公开信息</string>
    <string name="privateinfo">私密信息</string>
    <string name="name">姓名</string>
    <string name="psuedoname">艺名</string>
    <string name="website">个人网址</string>
    <string name="personalWebsite">个人\r\n网址</string>
    <string name="bio">简介</string>
    <string name="mail">邮箱</string>
    <string name="phone">电话</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>

    <!-- Image Description -->
    <string name="defaultDesc">photoShare</string>
    <string name="editPhotoCancle">取消照片</string>
    <string name="editPhotoSubmit">发布照片</string>
    <string name="editPhotoCrop">裁剪</string>
    <string name="editPhotoCropComplete">裁剪完成</string>
    <string name="editPhotoCaption">标题..</string>
    <string name="uploadPhotoCaption">上传</string>
    <string name="uploadPhotoContent">上传中..</string>

    <!-- News Description -->
    <string name="newsPrefix">动作</string>
    <string name="newsSuffix">干了什么</string>

    <!-- Decorate Texture -->
    <string name="textureMarble">marble</string>

    <!-- Exception Description -->
    <string name="eNetworkError">网络错误</string>
    <string name="erefreshError">无法刷新获取</string>
    <string name="esignUpError">注册失败</string>
    <string name="esignInError">登陆失败</string>
    <string name="esignIn">未登陆</string>
    <string name="emailError">输入邮件</string>
    <string name="epwdError">输入密码</string>
    <string name="enameError">输入姓名</string>
    <string name="epseudoNameError">输入笔名</string>
    <string name="efollowError">跟随失败</string>
    <string name="elikeError">赞失败</string>
    <string name="ephotoError">分享失败</string>
    <string name="ecommentError">评论失败</string>
    <string name="eeditProfileError">编辑失败</string>
    <string name="eError">错误消息</string>
    <string name="esignUpMailExistError">邮箱已注册</string>

    <!-- Success Description -->
    <string name="sOperationSuccess">操作成功</string>
    <string name="sPutCommentSuccess">评论成功</string>
    <string name="sGetFeedsSuccess">获取成功</string>
    <string name="sRefreshSuccess">刷新成功</string>
    <string name="sPublishPhotoSuccess">发布照片成功</string>
    <string name="sEditProfileSuccess">修改资料成功</string>
    <string name="sSuccess">操作成功</string>

    <!-- Notification Ticker -->
    <string name="nRefreshTicker">获取数据</string>
    <string name="nCommentTicker">发布评论</string>
    <string name="nPhotoTicker">发布照片</string>
    <string name="nFollowTicker">发布跟随</string>
    <string name="nLikeTicker">发布喜爱</string>
    <string name="nSuccessTicker">发布成功</string>

    <!-- Notification Tag -->
    <string name="nRefreshTag">Data</string>
    <string name="nCommentTag">comment</string>
    <string name="nPhotoTag">Photo</string>
    <string name="nLikeTag">Like</string>
    <string name="nFollowTag">Follow</string>
    <string name="nSuccessTag">Success</string>
    <string name="nRenren">Renren</string>
    <string name="nSinaWeibo">SinaWeibo</string>
    <string name="nTxWeibo">TxWeibo</string>

    <!-- Share Description -->
    <string name="renren">人人网</string>
    <string name="sinaWeibo">新浪微博</string>
    <string name="txWeibo">腾讯微博</string>

    <!-- Buttons Text Description -->
    <string name="retake">重拍</string>
    <string name="loadMore">加载</string>
    <string name="save">保存</string>
    <string name="start">开始</string>
    <string name="forward">前进</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    <string name="submit">确定</string>
    <string name="cancel">取消</string>
    <string name="myNews">我</string>
    <string name="followingNews">跟随</string>
    <string name="refresh">刷新</string>

    <!-- Api Invoker -->
    <string name="renren_one_click_photo_invoke">Renren.publishPhotoWithActivity</string>
    <string name="error_renren_authorize">人人授权失败</string>
    <string name="error_renren_publish_photo">人人发布失败</string>
    <string name="error_sina_weibo_authorize">新浪微博授权失败</string>
    <string name="error_sina_weibo_publish_photo">新浪微博发布失败</string>
    <string name="error_tx_weibo_authorize">腾讯微博授权失败</string>
    <string name="error_tx_weibo_publish_photo">腾讯微博发布失败</string>

    <!-- Fragment Invoker -->
    <string name="fcameraPhotoFragment">camera</string>
    <string name="fcommentsFragment">comments</string>
    <string name="fphotoFilterFragment">photoFilterFragment</string>
    <string name="fCropPhotoFragment">cropPhotoFragment</string>
    <string name="fdecoratedPhotoFragment">decoratedPhoto</string>
    <string name="fdecoratedPhotoUploadFragment">decoratedPhotoUpload</string>
    <string name="fdecoratedPhotoShareFragment">decoratedPhotoShare</string>
    <string name="fdecoratedSharingPreferenceFragment">decoratedSharingPreference</string>
    <string name="ffeedsFragment">feedsFragment</string>
    <string name="ffeedsItemFragment">feedsItemFragmet</string>
    <string name="ffindFriendsFragment">findFriends</string>
    <string name="ffollowInfoFragment">followInfo</string>
    <string name="flikeFragment">like</string>
    <string name="fmainFragment">main</string>
    <string name="fnewsFragment">news</string>
    <string name="fotherHomeTitleBarFragment">otherHomeTitleBar</string>
    <string name="fpersonalProfileFragment">personalProfile</string>
    <string name="fphotoBarFragment">photoBar</string>
    <string name="fpopularPhotosFragment">popularPhotos</string>
    <string name="fpreferenceSettingsFragment">preferenceSettings</string>
    <string name="fsharePreferenceFragment">sharePreference</string>
    <string name="fshareSettingsFragment">shareSettings</string>
    <string name="fsignInFragment">signIn</string>
    <string name="fsignUpFragment">signUp</string>
    <string name="fuserHomeFragment">userHome</string>
    <string name="fuserHomeTitleBarFragment">userHomeTitleBar</string>
    <string name="fuserProfileFragment">userProfile</string>

    <!-- Pop Window -->
    <string name="popMenuSave">保存至图库</string>
    <string name="popMenuCrop">裁剪</string>
    <string name="popMenuDecorate">渲染</string>

    <!-- 文件目录 -->
    <string name="userDirStr">/sdcard/cgema/usr</string>
    <string name="tempDirStr">/sdcard/cgema/temp/</string>
    <string name="homeDirStr">/sdcard/cgema/temp/home</string>
    <string name="popularDirStr">/sdcard/cgema/temp/popular</string>
    <string name="cropDirStr">/sdcard/cgema/crop/</string>
    <string name="cropedDirStr">/sdcard/cgema/croped/</string>
    <string name="poseDirStr">/sdcard/cgema/pose/</string>
    <string name="suitDirStr">/sdcard/cgema/suit/</string>

</resources>