<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/likeItemLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/likeUserHead"
        android:layout_width="@dimen/tinyImageWidth"
        android:layout_height="@dimen/tinyImageHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:contentDescription="@string/photos"
        android:src="@drawable/app_list_corner_round" />

    <TextView
        android:id="@+id/likeItemUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/likeUserHead"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/likeUserHead"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/likeItemDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/likeItemUserName"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/likeItemUserName"
        android:text="@string/defaultDesc"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/likeItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/likeItemDesc"
        android:layout_alignParentRight="true"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>