<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feedsItemLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="140dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/feedsItemLayoutHeaderId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/feedsUserHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/photos"
            android:src="@drawable/app_list_corner_round" />

        <TextView
            android:id="@+id/feedsUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/feedsUserHead"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/feedsDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/feedPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photos"
            android:src="@drawable/quickaction_slider_btn_pressed" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/feedsItemLayoutFooterId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:id="@+id/feedLike"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:background="@drawable/shape_bg_listview"
            android:text="@string/like"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/feedComment"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_bg_listview"
            android:text="@string/comment"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/feedLikeList"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/shape_bg_listview"
            android:text="@string/love"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" />
    </RelativeLayout>

</LinearLayout>