<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/findFriendsHead"
        android:layout_width="@dimen/tinyImageWidth"
        android:layout_height="@dimen/tinyImageHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/photos"
        android:src="@drawable/app_list_corner_round" />

    <TextView
        android:id="@+id/findFriendsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/findFriendsHead"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/findFriendsPseudoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/findFriendsName"
        android:layout_below="@+id/findFriendsName"
        android:text="@string/psuedoname"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>