<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newsPopularLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/newsPopularName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/newsPopularDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/newsPopularName"
        android:text="@string/defaultDesc" />

    <TextView
        android:id="@+id/newsPopularTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <GridView
        android:id="@+id/newsPopularPhotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newsPopularName"
        android:columnWidth="80dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" >
    </GridView>

    <TextView
        android:id="@+id/newsPopularHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/newsPopularDesc"
        android:text="@string/news"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>