<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userHomeWrapperId"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/otherHomeTitleBarId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/otherHomeHead"
            android:layout_width="@dimen/tinyImageWidth"
            android:layout_height="@dimen/tinyImageHeight"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/photos"
            android:src="@drawable/app_list_corner_round" />

        <TextView
            android:id="@+id/otherHomePhotoCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="33dp"
            android:layout_toRightOf="@+id/otherHomeHead"
            android:text="@string/photos"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/otherHomeLikesCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/otherHomePhotoCnt"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/otherHomePhotoCnt"
            android:text="@string/like"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/otherHomeFollowerCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/otherHomeLikesCnt"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/otherHomeLikesCnt"
            android:text="@string/follower"
            android:textAppearance="?android:attr/textAppearanceSmall" />
		
        <TextView
            android:id="@+id/otherHomeFollowingCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/otherHomeFollowerCnt"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/otherHomeFollowerCnt"
            android:text="@string/follow"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        
        <Button
            android:id="@+id/otherHomeFollowBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otherHomeFollowerCnt"
            android:layout_toLeftOf="@+id/otherHomeHead"
            android:text="@string/follow" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/otherHomeTitleBarAppendixId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/otherHomeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/otherHomeBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/otherHomeWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <GridView
        android:id="@+id/popularView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="80dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" >
    </GridView>

</LinearLayout>